// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activate Component should activate user/business 1`] = `
<Fragment>
  <Connect(IndexNav) />
  <div
    className="page-activate"
  >
    <div
      className="activate-box"
    >
      <h3
        className="text-center"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Please wait while we activate your account",
            "token": "random-id",
          }
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`Activate Component should render correctly 1`] = `
<Fragment>
  <Connect(IndexNav) />
  <div
    className="page-activate"
  >
    <div
      className="activate-box"
    >
      <i
        className="icon-sent-mail"
      />
      <h3
        className="text-center"
      >
        Verify your email address
      </h3>
      <p
        className="text-center"
      >
        You're almost there. Please finalise your business account creation by verifying your email with the activation email we just sent.
      </p>
    </div>
  </div>
</Fragment>
`;
